--- a/.github/workflows/excavator.yml
+++ b/.github/workflows/excavator.yml
@@ -1,8 +1,8 @@
 on:
   workflow_dispatch:
   schedule:
-    # run every 4 hours
-    - cron: '20 */4 * * *'
+    # run on 00:42 everyday
+    - cron: '42 0 * * *'
 name: Excavator
 jobs:
   excavate:
